examples/errors/kind_error.ik
type Wrapped<T> struct:
    foo T

fn bar(x Wrapped):
    pass

fn main():
    print("Hello world\n")
